--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,10 +12,11 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 once_cell = "1.4.1"
+chrono = "0.4.19"
 
 [dependencies.arcdps_codegen]
 version = "0.7.1"
-#path = "../codegen"
+path = "../codegen"
 
 [dependencies.imgui]
 package = "arcdps-imgui"
