--- a/codegen/Cargo.toml
+++ b/codegen/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
 name = "arcdps_codegen"
-version = "0.8.1"
+version = "0.9.0"
 authors = ["greaka <crates@greaka.de>"]
-edition = "2018"
+edition = "2021"
 description = "Macros for arcdps"
 repository = "https://github.com/greaka/arcdps_bindings"
 license = "MIT/Apache-2.0"
 
 [lib]
 proc-macro = true
+
+[features]
+imgui = []
 
 [dependencies]
 quote = "1.0.21"
