--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "arcdps"
-version = "0.8.1"
+version = "0.9.0"
 authors = ["Greaka <crates@greaka.de>"]
-edition = "2018"
+edition = "2021"
 description = "Rust bindings for the Guild Wars 2 dps-meter with focus on ease-of-use and performance."
 repository = "https://github.com/greaka/arcdps_bindings"
 categories = ["api-bindings"]
@@ -15,15 +15,14 @@ once_cell = "1.13.0"
 chrono = "0.4.20"
 
 [dependencies.arcdps_codegen]
-version = "0.8.1"
+version = "0.9.0"
 path = "../codegen"
 
 [dependencies.imgui]
 package = "arcdps-imgui"
 version = "0.8.0"
 features = ["tables-api"]
-#git = "https://github.com/gw2scratch/imgui-rs"
-#path = "../../imgui-rs/imgui"
+optional = true
 
 [dependencies.log]
 version = "0.4.17"
@@ -31,4 +30,5 @@ optional = true
 features = ["std"]
 
 [features]
-default = ["log"]
+default = ["imgui", "log"]
+imgui = ["dep:imgui", "arcdps_codegen/imgui"]
