--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,7 +12,10 @@ license = "MIT/Apache-2.0"
 
 [dependencies]
 once_cell = "1.13.0"
-chrono = "0.4.20"
+
+[dependencies.time]
+version = "0.3"
+features = ["parsing"]
 
 [dependencies.arcdps_codegen]
 version = "0.9.0"
