--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "arcdps"
-version = "0.10.0"
+version = "0.10.1"
 authors = ["Greaka <crates@greaka.de>"]
 edition = "2021"
 description = "Rust bindings for the Guild Wars 2 dps-meter with focus on ease-of-use and performance."
@@ -29,6 +29,12 @@ version = "0.4.17"
 optional = true
 features = ["std"]
 
+[dependencies.serde]
+version = "1.0.203"
+features = ["derive"]
+optional = true
+
 [features]
 default = ["imgui", "log"]
 imgui = ["dep:imgui", "arcdps_codegen/imgui"]
+serde = ["dep:serde", "chrono/serde"]
